<resources>
  <string name="app_name">Popular Movies</string>
  <string name="cd_movies_list">Movies List</string>
  <string name="menu_sort">Sort</string>
  <string name="action_most_popular">Most Popular</string>
  <string name="action_top_rated">Top Rated</string>
  <string name="action_favorites">Favorites</string>
  <string name="mark_favorite">mark as\n favorite</string>
  <string name="mark_unfavorite">unfavorite\n movie</string>
  <string name="poster">poster</string>
  <string name="trailers">Trailers:</string>

  <string name="chappie_title">Chappie</string>
  <string name="chappie_release_date">2015</string>
  <string name="chappie_duration">120min</string>
  <string name="chappie_vote">8.1/10</string>
  <string name="chappie_plot_synopsis">Every child comes into the world full of promise, and none
    more so than Chappie: he is gifted, special, a prodigy. Chappie he is a robot.
  </string>
  <string name="trailer">Trailer %d</string>
  <string name="intent_title">Open with</string>
  <string name="reviews">Reviews:</string>

  <string name="content_authority">android.com.movies</string>
</resources>
