<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.com.movies.ui.movie.detail.MovieDetailsActivity">
  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

      <FrameLayout
          android:id="@+id/lt_title"
          android:layout_width="match_parent"
          android:layout_height="@dimen/layout_title_height"
          android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/title_text_color"
            android:layout_margin="@dimen/margin_default"
            android:gravity="start|center"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:maxLines="2"
            tools:text="@string/chappie_title"/>

      </FrameLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin_default">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:contentDescription="@string/poster"
            tools:src="@mipmap/ic_launcher"/>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default">

          <TextView
              android:id="@+id/tv_release_date"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
              tools:text="@string/chappie_release_date"/>

          <TextView
              android:id="@+id/tv_duration"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="italic"
              android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
              android:layout_marginTop="@dimen/margin_small"
              tools:text="@string/chappie_duration"/>

          <TextView
              android:id="@+id/tv_vote"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
              android:layout_marginTop="@dimen/margin_small"
              tools:text="@string/chappie_vote"/>

          <Button
              android:id="@+id/btn_mark_favorite"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/colorAccent"
              android:layout_marginTop="10dp"
              android:textAllCaps="true"
              android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
              android:text="@string/mark_favorite"/>

        </LinearLayout>

      </LinearLayout>

      <TextView
          android:id="@+id/tv_plot_synopsis"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin_default"
          tools:text="@string/chappie_plot_synopsis"/>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorPrimary"
          android:layout_marginStart="@dimen/margin_default"
          android:layout_marginLeft="@dimen/margin_default"
          android:layout_marginRight="@dimen/margin_default"
          android:layout_marginEnd="@dimen/margin_default"
          android:layout_marginBottom="@dimen/margin_default"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_default"
          android:layout_marginStart="@dimen/margin_default"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:text="@string/trailers"/>

      <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_trailers"
          android:layout_margin="@dimen/margin_default"
          tools:listItem="@layout/trailer_list_item"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>


      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorPrimary"
          android:layout_marginStart="@dimen/margin_default"
          android:layout_marginLeft="@dimen/margin_default"
          android:layout_marginRight="@dimen/margin_default"
          android:layout_marginEnd="@dimen/margin_default"
          android:layout_marginBottom="@dimen/margin_default"/>
      
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_default"
          android:layout_marginStart="@dimen/margin_default"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:text="@string/reviews"/>

      <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_reviews"
          android:layout_margin="@dimen/margin_default"
          tools:listItem="@layout/trailer_list_item"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

</layout>